--- a/style.css
+++ b/style.css
@@ -41,6 +41,16 @@ nav ul li a{
     text-decoration: none;
     font-size: 18px;
 }
+nav ul li a ::after{
+    content: '';
+    width: 100;
+    height: 3px;
+    background:white ;
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    
+}
 .hero-image {
     position: absolute;
     right: -5%; /* Align image to the right */
