--- a/style.css
+++ b/style.css
@@ -155,5 +155,24 @@ transition: 0.5s;
     grid-gap: 40px;
     margin-top: 50px;
 }
+.services-list div{
+    background-color: grey;
+    padding: 40px;
+    font-size: 13px;
+    font-weight: 300;
+    border-right: 10px;
+}
+.services-list div h2{
+font-size: 20px;
+font-weight: 500;
+margin-bottom: 15px;
+}
+.services-list div a{
+    text-decoration: none;
+    color:red ;
+    font-size: 12px;
+    margin-top:40px;
+    display: inline;
+}
     
 
