--- a/style.css
+++ b/style.css
@@ -160,7 +160,8 @@ transition: 0.5s;
     padding: 40px;
     font-size: 13px;
     font-weight: 300;
-    border-right: 10px;
+    border-radius: 10px;
+    transition: background 0.5s,traansform 0.5s;
 }
 .services-list div h2{
 font-size: 20px;
@@ -174,5 +175,94 @@ margin-bottom: 15px;
     margin-top:40px;
     display: inline;
 }
-    
+.services-list div:hover{
+    background-color: #AA336A;
+    transform: translateY(-10px);
 
+}
+#portfolio{
+    padding: 50px 0;
+
+}
+/* Grid container */
+.work-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 40px; /* Adjusted for compatibility */
+    margin-top: 50px;
+}
+
+/* Grid items */
+.work {
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+}
+
+/* Images inside grid items */
+.work img {
+    width: 100%;
+    height: 500px;
+   
+    border-radius: 10px;
+    display: block;
+    transition: transform 0.5s;
+}
+.layer{
+    width: 100%;
+    height: 0;
+    background: linear-gradient(rgba(0,0,0,0.6),#ff004f);
+    border-radius: 10px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    font-size: 14px;
+    text-align: center;
+    transition: height 0.5s;
+}
+.layer h3{
+    font-weight: 500;
+    margin-bottom: 20px;
+    color: white;
+}
+.layer a {
+    margin-top: 20px;
+    color: #ff004f;
+    text-decoration: none;
+    font-size: 18px;
+    background-color: white;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 60px;
+}
+.work:hover img{
+
+    transform: scale(1.1);
+}
+.work:hover .layer{
+    height: 100%;
+}
+.btn{
+    display: block;
+    margin: 50px auto;
+    width:fit-content ;
+    border: 1px solid #ff004f;
+    padding: 14px 50px;
+    border-radius: 6px;
+    text-decoration: none;
+    color: black;
+    transition: background 0.5s;
+}
+.btn:hover{
+    background: #ff004f;
+
+
+}
