--- a/style.css
+++ b/style.css
@@ -359,7 +359,7 @@ nav .fas{
         height: 100vh;
         padding-top: 50px;
         z-index: 2;
-        transition: right 0.5s;
+        transition: right 0.5s; /* Smooth transition */
     }
     nav ul li{
         display: block;
@@ -370,7 +370,31 @@ nav .fas{
         top: 25px;
         left: 25px;
         cursor: pointer;
+        
+        
     }
+.sub-title{
+    font-size: 40px;
+}
+.about-col-1, .about-col-2{
+    flex-basis: 100%;/*increasing image*/
+}
+.about-col-1{
+    margin-bottom: 30px;/*spacing*/
+}
+.about-col-2{
+    font-size: 14px;/*reduce font size*/
+}
+.tab-links{
+    font-size: 16px;/*adding size*/
+    margin-right: 20px;
+}
+.contact-left, .contact-right{
+    flex-basis: 100%;
+}
+.copyright{
+    font-size: 14px;
+}
     
 }
 
