--- a/style.css
+++ b/style.css
@@ -320,18 +320,67 @@ form .btn2{
     margin-top: 20px;
     cursor: pointer;
 }
-.copyright{
-    width: 100%;
+/* Footer Styles */
+footer {
+    background-color:black;
+    color: #fff;
+    padding: 2rem 0;
     text-align: center;
-    padding: 25px 0;
-    background:black;
-    margin-top: 20px;
-    font-weight: 400;
+  }
+  .footer-links ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .footer-links li {
+    margin-bottom: 0.5rem;
+  }
+  
+  .footer-links a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 1rem;
+    transition: color 0.3s;
+  }
+  
+  .footer-links a:hover {
+    color: #00bcd4;
+  }
+  .footer-socials .social-icons a img {
+    width: 32px;
+    height: 32px;
+    transition: transform 0.3s ease-in-out;
+    
+  }
+
+  
+  .footer-socials .social-icons {
+    color:blue;
+    transform: translateY(-5px);
+    
+  }
+  .footer-socials .social-icons a{
     color: white;
-}
-.copyright i{
-    color: #ff004f;
-}
+  }
+  
+  .footer-socials .social-icons a img:hover {
+    transform: scale(1.2);
+  }
+  
+  
+  
+
+  
+  .footer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 1rem;
+  }
 
 /*---css small screen*/
 nav .fas{
