--- a/style.css
+++ b/style.css
@@ -435,9 +435,11 @@ nav .fas{
         margin-top: 20%;
         font-size: 16px;
     }
-    .hero-image{
-        position: absolute;
-        margin-left: 150px;
+
+    .img{
+        width: 350px;
+        height: 35g0px;
+        margin-left: 0px;
     }
     .header-text h1 {
         font-size: 30px;
