added the responive part of the image

--- a/style.css
+++ b/style.css
@@ -437,9 +437,9 @@ nav .fas{
     }
 
     .img{
-        width: 350px;
-        height: 35g0px;
-        margin-left: 0px;
+        width: 320px;
+        height: 350px;
+        margin-top: 130px;
     }
     .header-text h1 {
         font-size: 30px;
